# crewai-code-repo-analyzer

./: .env_example  .gitignore  README.md  agents.py  design.md  diagram.puml  diagram_io.py  file_io.py  git_test.py  git_util.py  main.py  output.json  pyproject.toml  raw_task_output.txt  re_test.py  tasks.py
callbacks/: diagram_io.py
plantuml_help/: PlantUML_Language_Reference_Guide_en.pdf:Zone.Identifier  blckly-class-diagram.puml  blckly-class-diagram.puml:Zone.Identifier  blckly_class_diagram.puml  blckly_class_diagram.puml:Zone.Identifier  blckly_component_diagram.puml  blckly_component_diagram.puml:Zone.Identifier  component-sample1.puml  sample-sequence1.puml  stock-mgmt-sequence.puml  stock-mgmt-sequence.puml:Zone.Identifier
tools/: git_tools.py  plantuml_generator.py
